Populate skills on Google Sheets character sheets